jar tf ./jars/hadoop-aws-3.4.2.jar | grep S3AFileSystem