@@ -7,5 +7,18 @@
 -XX:+UseGCOverheadLimit
 -XX:+ExitOnOutOfMemoryError
 -XX:ReservedCodeCacheSize=256M
+
+# WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+-XX:+EnableDynamicAgentLoading
+
 -Djdk.attach.allowAttachSelf=true
 -Djdk.nio.maxCachedBufferSize=2000000
+
+# WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+-Djdk.instrument.traceUsage
+
+# WARNING: Unable to attach Serviceability Agent. You can try again with escalated privileges. Two options: a) use -Djol.tryWithSudo=true to try with sudo
+# -Djol.tryWithSudo=true
+
+-XX:+UnlockDiagnosticVMOptions
+-XX:+UseAESCTRIntrinsics
